1. Refresh the content only when the user refreshes: ingredientsController 2. Prompt animation during action execution: Add ingredients, refrigerator 3. Focus blur effect: new ingredients, refrigerator

--- a/PantryPal/Lotties/AddSuccess/AddSuccess.xib
+++ b/PantryPal/Lotties/AddSuccess/AddSuccess.xib
@@ -38,6 +38,9 @@
             <point key="canvasLocation" x="130.53435114503816" y="-11.267605633802818"/>
         </view>
     </objects>
+    <designables>
+        <designable name="L4q-hc-vtW"/>
+    </designables>
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
