--- a/PantryPal/Views/Ingredients/IngredientsCell/IngredientsTableViewCell.xib
+++ b/PantryPal/Views/Ingredients/IngredientsCell/IngredientsTableViewCell.xib
@@ -20,7 +20,7 @@
                         <rect key="frame" x="12" y="12" width="369" height="116"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </view>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="1000" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" translatesAutoresizingMaskIntoConstraints="NO" id="Vb0-8p-Djb">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="1000" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" image="placeholderImage" translatesAutoresizingMaskIntoConstraints="NO" id="Vb0-8p-Djb">
                         <rect key="frame" x="22" y="20" width="100" height="100"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="100" id="Rgo-cg-ag3"/>
@@ -138,6 +138,7 @@
     <resources>
         <image name="clock.fill" catalog="system" width="128" height="123"/>
         <image name="ingredients" width="512" height="512"/>
+        <image name="placeholderImage" width="1200" height="1200"/>
         <image name="price" width="512" height="512"/>
         <image name="storage" width="512" height="512"/>
     </resources>
