--- a/PantryPal/Views/Ingredients/IngredientsDetail/IngredientsDetail.storyboard
+++ b/PantryPal/Views/Ingredients/IngredientsDetail/IngredientsDetail.storyboard
@@ -26,7 +26,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="393" height="250"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="62v7ntlkgl8-vincent-guth" translatesAutoresizingMaskIntoConstraints="NO" id="zbt-rw-NiF">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholderImage" translatesAutoresizingMaskIntoConstraints="NO" id="zbt-rw-NiF">
                                                     <rect key="frame" x="0.0" y="0.0" width="393" height="250"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="250" id="OWz-1l-cOZ"/>
@@ -433,10 +433,10 @@
         </scene>
     </scenes>
     <resources>
-        <image name="62v7ntlkgl8-vincent-guth" width="2048" height="1367"/>
         <image name="camera" catalog="system" width="128" height="93"/>
         <image name="outline_close_white_24pt" width="24" height="24"/>
         <image name="outline_note_add_black_24pt" width="24" height="24"/>
+        <image name="placeholderImage" width="1200" height="1200"/>
         <systemColor name="labelColor">
             <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
