--- a/PantryPal/Views/Calendar/CalendarPage.storyboard
+++ b/PantryPal/Views/Calendar/CalendarPage.storyboard
@@ -19,7 +19,7 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background4" translatesAutoresizingMaskIntoConstraints="NO" id="eyl-be-B4G">
                                 <rect key="frame" x="0.0" y="0.0" width="393" height="818"/>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="calendar_background2" translatesAutoresizingMaskIntoConstraints="NO" id="Z7y-Nf-kyM">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wood" translatesAutoresizingMaskIntoConstraints="NO" id="Z7y-Nf-kyM">
                                 <rect key="frame" x="0.0" y="89" width="393" height="329"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="393" id="tiU-23-wxK"/>
@@ -89,7 +89,7 @@
     </scenes>
     <resources>
         <image name="background4" width="1200" height="1604"/>
-        <image name="calendar_background2" width="5000" height="5000"/>
+        <image name="wood" width="3544" height="2364"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
